@@ -915,6 +915,34 @@ Commander <- function(){
     tkbind(.rmd, "<Control-E>", editMarkdown)
     tkbind(.rnw, "<Control-e>", editKnitr)
     tkbind(.rnw, "<Control-E>", editKnitr)
+    if (MacOSXP()){
+        tkbind(.commander, "<Meta-x>", onCut)
+        tkbind(.commander, "<Meta-X>", onCut)
+        tkbind(.commander, "<Meta-c>", onCopy)
+        tkbind(.commander, "<Meta-C>", onCopy)
+        tkbind(.commander, "<Meta-v>", onPaste)
+        tkbind(.commander, "<Meta-V>", onPaste)
+        tkbind(.commander, "<Meta-r>", onSubmit)
+        tkbind(.commander, "<Meta-R>", onSubmit)
+        tkbind(.commander, "<Meta-Tab>", onSubmit)
+        tkbind(.commander, "<Meta-f>", onFind)
+        tkbind(.commander, "<Meta-F>", onFind)
+        tkbind(.commander, "<Meta-s>", saveLog)
+        tkbind(.commander, "<Meta-S>", saveLog)
+        tkbind(.commander, "<Meta-a>", onSelectAll)
+        tkbind(.commander, "<Meta-A>", onSelectAll)
+        tkbind(.commander, "<Meta-w>", onRedo)
+        tkbind(.commander, "<Meta-W>", onRedo)
+        tkbind(.log, "<Meta-ButtonPress-1>", contextMenuLog)
+        tkbind(.rmd, "<Meta-ButtonPress-1>", contextMenuRmd)
+        tkbind(.rnw, "<Meta-ButtonPress-1>", contextMenuRnw)
+        tkbind(.output, "<Meta-ButtonPress-1>", contextMenuOutput)
+        tkbind(.messages, "<Meta-ButtonPress-1>", contextMenuMessages)
+        tkbind(.rmd, "<Meta-e>", editMarkdown)
+        tkbind(.rmd, "<Meta-E>", editMarkdown)
+        tkbind(.rnw, "<Meta-e>", editKnitr)
+        tkbind(.rnw, "<Meta-E>", editKnitr)
+    }
     tkwm.deiconify(.commander)
     tkfocus(.commander)
     if (getRcmdr("crisp.dialogs")) tclServiceMode(on=TRUE)
